# UA2F-cpp

./: AD.txt  CMakeLists.txt  Makefile
files/: ua2fcpp.config  ua2fcpp.init  ua2fcpp.uci
src/: ua2f.cpp
